--- a/index.html
+++ b/index.html
@@ -3,15 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
-    />
-
+    <link rel="stylesheet" href="style/style.css" />
     <title>Frontend Mentor | Recipe finder website</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header__main">
+      <a href="about.html" class="header__logo">
+        <img
+          src="assets/images/logo.svg"
+          alt="Healthy Recipe Finder site logo"
+          width="260"
+          height="40"
+        />
+      </a>
+
+      <button class="header__mobile">
+        <img
+          src="assets/images/icon-hamburger-menu.svg"
+          alt="Open mobile navigation"
+        />
+      </button>
+
+      <nav class="header__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="index.html" class="nav__link nav__active">Home</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="about.html" class="nav__link">About</a>
+          </li>
+
+          <li class="nav__item">
+            <a href="recipes.html" class="nav__link">Recipes</a>
+          </li>
+        </ul>
+
+        <button class="nav__btn btn">Browse recipes</button>
+      </nav>
+    </header>
+    <script src="script.js"></script>
+  </body>
 </html>
