Add hero section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,34 @@
         <button class="nav__btn btn">Browse recipes</button>
       </nav>
     </header>
+    <main>
+      <section class="hero">
+        <div class="hero__inner container">
+          <div class="hero__content">
+            <h1 class="hero__heading"><span>Healthy</span> meals, zero fuss</h1>
+            <p class="hero__text">
+              Discover eight quick, whole-food recipes that you can cook
+              tonight—no processed junk, no guesswork.
+            </p>
+            <a class="hero__btn btn btn--big" href="recipes.html"
+              >Start exploring</a
+            >
+          </div>
+          <div class="hero__imgs">
+            <img
+              class=""
+              src="assets/images/image-home-hero-large.webp"
+              alt="Hero img"
+            />
+            <img
+              class="hide__desktop"
+              src="assets/images/image-home-hero-small.webp"
+              alt="Hero img"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
