add section feature

--- a/index.html
+++ b/index.html
@@ -69,6 +69,57 @@
           </div>
         </div>
       </section>
+
+      <section class="feature container">
+        <h2 class="feature__heading">What you’ll get</h2>
+        <div class="feature__grid">
+          <div class="feature__item">
+            <div class="feature__img-box">
+              <img
+                src="assets/images/icon-whole-food-recipes.svg"
+                alt="Whole food recipes icon"
+              />
+            </div>
+            <div class="feature__text-box text-box">
+              <h3 class="text-box__heading">Whole-food recipes</h3>
+              <p class="text-box__text">
+                Each dish uses everyday, unprocessed ingredients.
+              </p>
+            </div>
+          </div>
+
+          <div class="feature__item">
+            <div class="feature__img-box">
+              <img
+                src="assets/images/icon-minimum-fuss.svg"
+                alt="Minimum fuss icon"
+              />
+            </div>
+            <div class="feature__text-box text-box">
+              <h3 class="text-box__heading">Minimum fuss</h3>
+              <p class="text-box__text">
+                All recipes are designed to make eating healthy quick and easy.
+              </p>
+            </div>
+          </div>
+
+          <div class="feature__item">
+            <div class="feature__img-box">
+              <img
+                src="assets/images/icon-search-in-seconds.svg"
+                alt="Search in seconds icon"
+              />
+            </div>
+            <div class="feature__text-box text-box">
+              <h3 class="text-box__heading">Search in seconds</h3>
+              <p class="text-box__text">
+                Filter by name or ingredient and jump straight to the recipe you
+                need.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="script.js"></script>
   </body>
