added recipes page

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header__main">
-      <a href="about.html" class="header__logo">
+      <a href="index.html" class="header__logo">
         <img
           src="assets/images/logo.svg"
           alt="Healthy Recipe Finder site logo"
