--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </li>
         </ul>
 
-        <button class="nav__btn btn">Browse recipes</button>
+        <a href="recipes.html" class="nav__btn btn">Browse recipes</a>
       </nav>
     </header>
 
